--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "conductor-runner-example",
+  "name": "conductor-js-slang",
   "version": "0.0.1",
   "packageManager": "yarn@4.6.0",
   "description": "",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tsammeow/conductor-runner-example.git"
+    "url": "git+https://github.com/tsammeow/conductor-js-slang.git"
   },
   "author": "tsammeow",
   "license": "ISC",
@@ -18,15 +18,21 @@
     "dist"
   ],
   "bugs": {
-    "url": "https://github.com/tsammeow/conductor-runner-example/issues"
+    "url": "https://github.com/tsammeow/conductor-js-slang/issues"
   },
-  "homepage": "https://github.com/tsammeow/conductor-runner-example#readme",
+  "homepage": "https://github.com/tsammeow/conductor-js-slang#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.2",
+    "@types/path-browserify": "^1.0.1",
     "conductor": "https://github.com/source-academy/conductor.git#0.2.1",
+    "js-slang": "https://github.com/tsammeow/js-slang-lean.git",
+    "path-browserify": "^1.0.1",
     "rollup": "^4.34.1",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "tslib": "^2.8.1",
     "typescript": "^5.5.3"
   }
